--- a/BeyondAcad.html
+++ b/BeyondAcad.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -100,9 +102,9 @@
 <section>
   <h1 class="head">Beyond Acadmics</h1>
   <br>
-  <div   class="faccard">
+  <div  style=" background-color:#b1dce6 ; padding-bottom:15px "  class="faccard">
     <div>
-      <h2 style="color: chocolate; font-weight: bold;">Safety & Security </h2>
+      <h2 style="color: chocolate; font-weight: bold;    font-family: 'Volkhov', serif; ">Safety & Security </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -111,16 +113,16 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2 style="color: darkgreen; font-weight: bold;"> Eco-Frindly School </h2>
+      <h2 style="color: darkgreen; font-weight: bold;    font-family: 'Volkhov', serif; "> Eco-Frindly School </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
       <img class="im"  src="https://cdn.pixabay.com/photo/2016/10/30/05/45/learning-1782430_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
-  <div   class="faccard">
+  <div style=" background-color:#b1dce6 ; padding-bottom:15px "  class="faccard">
     <div>
-      <h2 style="color: maroon;  font-weight: bold;"> Arts </h2>
+      <h2 style="color: maroon;  font-weight: bold;    font-family: 'Volkhov', serif; "> Arts </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -129,16 +131,16 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2 style="color: blue; font-weight: bold;">  Culture  </h2>
+      <h2 style="color: blue; font-weight: bold;    font-family: 'Volkhov', serif; ">  Culture  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
       <img class="im"  src="https://cdn.pixabay.com/photo/2016/11/08/05/40/actor-1807557_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
-  <div   class="faccard">
+  <div style=" background-color:#b1dce6 ; padding-bottom:15px "   class="faccard">
     <div>
-      <h2 style="color: blueviolet ; font-weight: bold;"> Sports </h2>
+      <h2 style="color: blueviolet ; font-weight: bold;    font-family: 'Volkhov', serif; "> Sports </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -147,7 +149,7 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2 style="color:gold; font-weight: bold;"> Field Visit   </h2>
+      <h2 style="color:gold; font-weight: bold;    font-family: 'Volkhov', serif; "> Field Visit   </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -157,20 +159,11 @@
 </section>
 <br>
 <br>
-<h1 class="head">Facility </h1>
-<br>
-<!-- <section style="background-color: rgb(124, 198, 201);">
- 
-  <br>
-  
-</section> -->
-<br>
-<br>
 
 
 <section>
   <!-- Footer -->
-<footer class="page-footer  font-small blue-grey lighten-5">
+<footer style="    font-family: 'Titillium Web', sans-serif;" class="page-footer  ">
 
   <div style="background-color: #031640 ;">
     <div class="container">
