--- a/ss.html
+++ b/ss.html
@@ -10,7 +10,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
@@ -93,7 +95,7 @@
   <br>
   <br>
 
-  <section  >
+  <!-- <section  >
     <div  class="facbreadcrum" >
     <img   class="facbread"  src="./img/Academics.png" alt="" width="100%" >
     <div class="midle">
@@ -102,7 +104,7 @@
     </p>
     </div>
   </div>
-  </section>
+  </section> -->
 <section>
 
 <br>
