--- Auto-Git Commit ---

--- a/Acadmics.html
+++ b/Acadmics.html
@@ -91,7 +91,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img class="im"   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+  <img class="im"   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/bread.png" alt="" width="100%" >
   <div class="midle">
     <p> Academics <br>
       </p>
@@ -111,7 +111,7 @@
 
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="./img/prim.jpg" alt="Card image cap">
+          <img class="card-img-top" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/prim.jpg" alt="Card image cap">
           <a>
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -153,7 +153,7 @@
 
   <!-- Card image -->
   <div class="view overlay">
-    <img class="card-img-top" src="./img/mid.jpg" alt="Card image cap">
+    <img class="card-img-top" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/mid.jpg" alt="Card image cap">
     <a>
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -199,7 +199,7 @@
 
         <!-- Card image -->
         <div class="view overlay">
-          <img class="card-img-top" src="./img/high.JPG" alt="Card image cap">
+          <img class="card-img-top" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/high.JPG" alt="Card image cap">
           <a>
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -242,7 +242,7 @@
  
          <!-- Card image -->
          <div class="view overlay">
-           <img class="card-img-top" src="./img/high.JPG" alt="Card image cap">
+           <img class="card-img-top" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/jrc.jpg" alt="Card image cap">
            <a>
              <div class="mask rgba-white-slight"></div>
            </a>
@@ -293,7 +293,7 @@
       <a href=""> Know More</a> </p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
+      <img src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/lib.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
   <div   class="faccard">
@@ -302,7 +302,7 @@
       <p class="para" style="padding: 15px;">We at Vidarbha Buniyadi provide a range of eight practical labs to our students keeping in mind the quality of equipments and safety measures taken during special practicals. Spacious, highly updated and well furnished lab environment is provided with independent floor allotted to each lab. <br>  <a href=""> Know More</a> </p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
+      <img src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/lab.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
   
@@ -312,7 +312,7 @@
       <p class="para" style="padding: 15px;">Our buses also ply for students in need of transport at a very reasonable cost. Safety, hygiene and comfort are services utmost taken care of. Students coming from remote areas like bahadura, panchgaon, vihirgaon, kalamna, dighori, narsala, etc are really happy with this service along with their parents satisfactory reviews. </p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
+      <img src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/bus.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
 
@@ -322,7 +322,7 @@
       <p class="para" style="padding: 15px;">We strictly follow the rules and regulation laid by Government of India in order to provide regular, hygienic, freshly-cooked and a good amount of food to all of our students from class 1 to 8 in recess period which works in two shifts. Nearly 1000 students are benefitted on a daily basis. </p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 250px" height="200px">
+      <img src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/meal.jpg" alt="" width=" 250px" height="200px">
     </div>
   </div>
 
