--- a/prim.html
+++ b/prim.html
@@ -93,7 +93,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img class="im"   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+  <img class="im"   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/bread.png" alt="" width="100%" >
   <div class="midle">
     <p> Acadmics <br>
     </p>
@@ -108,7 +108,7 @@
   <br>
  <div  class="content">
 <div class="imgbg">
- <img src="./img/person_2.jpg" width="0200px" height="200px" alt="">
+ <img src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/acad/prihead.jpg" width="0200px" height="200px" alt="">
 
 </div>
 <div>
