--- a/BeyondAcad.html
+++ b/BeyondAcad.html
@@ -90,7 +90,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/beyond academics 1.png" alt="" width="100%" >
+  <img   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/bread.png" alt="" width="100%" >
   <div class="midle">
     <p> Beyond Learning <br>
     </p>
@@ -108,7 +108,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2016/01/17/02/08/cctv-1144371_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/cctv.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -117,7 +117,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2016/10/30/05/45/learning-1782430_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/evs.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div style=" background-color:#b1dce6 ; padding-bottom:15px "  class="faccard">
@@ -126,7 +126,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/intel.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -135,7 +135,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2016/11/08/05/40/actor-1807557_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/gandhi.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div style=" background-color:#b1dce6 ; padding-bottom:15px "   class="faccard">
@@ -144,7 +144,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2015/01/26/22/40/child-613199_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/sports.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -153,7 +153,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img class="im"  src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_1280.jpg" alt="" width=" 300px" height="300px">
+      <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/beyond/field.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
 </section>
