--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
+
   <!-- MDB icon -->
   <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -19,6 +19,18 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/aboutus.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174954682-1');
+</script>
+
+
 </head>
 <body>
 
@@ -90,7 +102,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/About us.png" alt="" width="100%" >
+  <img   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/abtus/bread.JPG" alt="" width="100%" >
   <div class="midle">
     <p> About us <br>
      </p>
@@ -104,17 +116,25 @@
   <h2 class="head" id="about">About Sevadal Community </h2>
   <br>
   <div  class="container">
-    <div class="row phone">
+    <div class="row ">
       <div class="col">
         
       <p class="para"> Sevadal Education Society was founded in the year 1958, by great patriot Late Shri Sulemankhan Pathan Guruji alongwith his colleagues of Sevadal cadre with very limited resources and extreme hardships. He was a dedicated Freedom fighter who firmly believed in Gandhian philosophy. Education not only improves one’s life and helps in character building but also plays a major role in Nation building. With this vision, to train young minds with patriotism and national values, to educate and to develop self confidence in them, this Society was established. With his strong will, commitment, strength, determination and the strategic support of Hon’able Shri Keshaoraoji Shende, who also happens to be the ex-president of sevadal education society, the society has developed from its humble beginning into a mammoth entity. The Society conceptualized its journey by starting Vidarbha Buniyadi Primary School, Middle School, High School and Vidarbha Buniyadi Junior College to cater the demand and need of education in the backward areas of East Nagpur. </Span>
        </p>
       </div>
+      <!-- <div class="col">
+     <img  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/abtus/1.jpg"   width="98%" height=" 90%">
+      </div> -->
+    </div>
+    <div class="row ">
+     
       <div class="col">
-     <img  src="./img/seva.jpg"   width="98%" height=" 90%">
+     <img  src="../001d.jpg"   width="100%" height=" 100%">
       </div>
     </div>
 </section>
+<br>
+<br>
 <section>
   <h1 class="head">Vission & Mission</h1>
   <div class="container">
@@ -151,17 +171,30 @@
 <br>
 <br>
 <h1 class="head">Our Inspirations</h1>
-<section style="background-color: rgb(221, 221, 255);">
+<section style="background-color: #b1dce6cb;">
+  <div class="ds-msg">
+    <hr> 
+  <div>
+  <p class="para para2"> Dear Students and Parents, <br>
+     “Teachers must have three loves: love of learning, love of learners and love of bringing first two loves together”. Scott Hayden. <br> 
+    Vidarbha Buniyadi High school and Jr. College’s mission is to provide such an education, considering the fact that each student is different, as a person and as a learner. We believe that effective learning and teaching can be built under a shared spirit of respect among Management, Teachers, Students and Parents. Our curriculum and practices are constantly reviewed to confirm that we are following the most updated technologies, best practices, meeting all regulations, and addressing the future needs of our students. 
+    !   <br><span style="float: right; font-weight: bold;" >Mrs. Seema Ravindra Deshpande  </span> <br> <span style="float: right; font-weight: bold; " > Principal </span></p>  </div>
+  <div>
+    <img class="ds-img" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/abtus/2.jpg"  >
+  </div>
+  </div>
+
+
 <div class="ds-msg">
   <div>
-  <img class="ds-img" src="./img/president.jpg"  >
+  <img class="ds-img" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/abtus/3.jpg"  >
 </div>
 <div>
 <p class="para para2"> We are passionate to educate children to stimulate their process of thinking and discrimination with scientific temperament, enhance their love for nation and honour for women through a teacher having positive attitude to inculcate value education, innovative approach with global relevance and academic excellence. This helps in grooming the personality, character and competitive attitude of a student who can actively balance between rights and duties as a future responsible citizen of India with national values. <br> The institution is situated at a huge campus of 2 acres having various departments with state of art infrastructure, laboratories including well equiped computer Laboratory, rich library, language lab with modern teaching aids, huge play ground and amenities. 
     <br><span style="float: right; font-weight: bold;" >Sanjay Shende </span> <br> <span style="float: right;font-weight: bold;" > President </span></p>  </div>
 </div>
 
-<hr>
+
 
 <div class="ds-msg">
   <hr> 
@@ -171,7 +204,7 @@
   Vidarbha Buniyadi High school and Jr. College’s mission is to provide such an education, considering the fact that each student is different, as a person and as a learner. We believe that effective learning and teaching can be built under a shared spirit of respect among Management, Teachers, Students and Parents. Our curriculum and practices are constantly reviewed to confirm that we are following the most updated technologies, best practices, meeting all regulations, and addressing the future needs of our students. 
   !   <br><span style="float: right; font-weight: bold;" >Mrs. Seema Ravindra Deshpande  </span> <br> <span style="float: right; font-weight: bold; " > Principal </span></p>  </div>
 <div>
-  <img class="ds-img" src="./img/principl.jpg"  >
+  <img class="ds-img" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/abtus/2.jpg"  >
 </div>
 </div>
 <br>
@@ -243,7 +276,7 @@
 
         <!-- Content -->
         <h6 class="text-uppercase font-weight-bold">VBJC</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <hr class=" blue accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; ">
         <p>Vidarbha Buniyadi Primary School, High School and Junior College. <br>
           Government recognised,
           Private
@@ -259,7 +292,7 @@
 
         <!-- Links -->
         <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <hr class=" blue accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; ">
         <p>
           <a class="dark-grey-text" href="index.html">Home</a>
         </p>
@@ -281,7 +314,7 @@
 
         <!-- Links -->
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <hr class="blue accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
           <i class="fas fa-home mr-3"></i>Plot no. - 235, Omnagar, 
           Sakkardara chowk,  Umred Road,  Nagpur- 440024</p>
