--- a/Acadmics.html
+++ b/Acadmics.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
+ 
   <!-- MDB icon -->
   <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -20,6 +20,17 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/acadmics.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
+
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-174954682-1');
+  </script>
 </head>
 <body>
 
