--- a/Admission.html
+++ b/Admission.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
+ 
   <!-- MDB icon -->
   <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -19,7 +19,16 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/admi.css">
-
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-174954682-1');
+  </script>
 </head>
 <body>
 
@@ -92,7 +101,7 @@
 
   <section  >
     <div  class="facbreadcrum" >
-    <img   class="facbread"  src="./img/Academics 3.png" alt="" width="100%" >
+    <img   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/admis/bread.png" alt="" width="100%" >
     <div class="midle">
       <p> Admission <br>
       </p>
