--- a/Faculty.html
+++ b/Faculty.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
+
   <!-- MDB icon -->
   <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -21,7 +21,16 @@
   <link rel="stylesheet" href="css/saurabhfaculty.css">
   <link rel="stylesheet" href="css/faculty.css">
 
-
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-174954682-1');
+  </script>
 </head>
 <body>
 
@@ -96,7 +105,7 @@
 
 <section  >
   <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/faculty 1.png" alt="" width="100%" >
+  <img   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/team/bread.png" alt="" width="100%" >
   <div class="middle">
     <p>  Faculty  <br>
     </p>
