--- a/exhibition.html
+++ b/exhibition.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
-  <!-- MDB icon -->
-  <link rel="icon" href="./img/fav.ico" type="image/x-icon">
+<link href="http://vidarbhabuniyadischoolandjuniorcollege.in/fav.ico" rel="shortcut icon">
+<link rel="icon" href="http://vidarbhabuniyadischoolandjuniorcollege.in/fav.ico" sizes="16x16">
+<meta name="description" content=" Vidarbha Buniyad School and Jr. College ">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/services.css">
+  <link rel="stylesheet" href="css/acadmics.css">
+
   <script type="text/javascript">
     // MDB Lightbox Init
    $(function () {
@@ -110,12 +112,67 @@
 <br>
 <br>
 <section>
-    <h2 class="ser-heading">   <img src="./img/flaticon/meditation.png"> <br>  Yoga 
-  </h2>
-    <p class="paras"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus mollitia laudantium impedit molestias ipsam earum debitis voluptas eius, suscipit ullam, placeat at dolorum ad, ipsa assumenda fuga excepturi eveniet rem? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos iste illum qui ipsa ducimus impedit iure sit! Saepe tempora officia eligendi obcaecati harum. Itaque dolorem assumenda obcaecati ipsam magnam. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate eveniet enim qui totam odio? Ratione sint reiciendis eum tenetur vel fugit eaque dolor facilis? Voluptate necessitatibus deserunt possimus animi commodi?</p>
+  <h2 class="ser-heading">   <img src="./img/flaticon/meditation.png"> <br> Exhibition
+</h2>
+
 
 </section>
 <section>
+<div  style=" background-color:white ; padding-bottom:15px "  class="faccard">
+  <div>
+    <h2 style="color: chocolate; font-weight: bold;    font-family: 'Volkhov', serif; ">Floral </h2>
+    <p style="padding: 15px;">HSC Vocational (M.C.V.C) Horticulture and Crop Science Dept. have organized a Flower Arrangement and Flower Carpet Competition based on Floriculture (subject of Horticulture). There will be group participation of students from our school of class VIII to XII (as per High School and Junior College). 
+      Due to this, Artistic and Scientific approach of students can be seen. Their interest in Flower Business also increases. In this competition they have to arrange the flowers keeping in mind their beauty.
+      We get an enthusiastic participation from students. An excellent arrangement gets a prize. And runner ups are also chosen for the same.</p>
+  </div>
+  <div>
+    <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/service/exb/Floral.JPG" alt="" width=" 300px" height="300px">
+  </div>
+</div>
+
+<div  style=" background-color:#b1dce6 ; padding-bottom:15px "  class="faccard">
+  <div>
+    <h2 style="color: chocolate; font-weight: bold;    font-family: 'Volkhov', serif; ">SCIENCE </h2>
+    <p style="padding: 15px;">Science exhibition is an opportunity for students to apply the scientific method learnt in classroom in real-time problems and to conduct independent research.
+      Such exhibition proved to be a great platform for presentation of student’s talent. The students explain their projects in front of everyone and develop public speaking skills as well and overcome stage fear. It boosts the confidence of the students and outshines their personality.
+      The main purpose of science exhibition is to instil scientific attitude in the young generation to make them realise the interdependence of science, technology and society.</p>
+  </div>
+  <div>
+    <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/service/exb/techr.JPG" alt="" width=" 300px" height="300px">
+  </div>
+</div>
+
+<div  style=" background-color:white ; padding-bottom:15px "  class="faccard">
+  <div>
+    <h2 style="color: chocolate; font-weight: bold;    font-family: 'Volkhov', serif; ">BOOKS  </h2>
+    <p style="padding: 15px;">It’s the best way to lure children into reading hobby and give them a motivation to read by offering them a wide selection of books to choose from that they can look at before they decide to buy. Our book exhibition give them an even bigger selection because we get books from many different publishers, subjects, genres and themes from around the world.
+    </p>
+  </div>
+  <div>
+    <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/service/exb/book2.jpg" alt="" width=" 300px" height="300px">
+  </div>
+</div>
+<div  style=" background-color:#b1dce6 ; padding-bottom:15px "  class="faccard">
+  <div>
+    <h2 style="color: chocolate; font-weight: bold;    font-family: 'Volkhov', serif; ">DRAWING  </h2>
+    <p style="padding: 15px;">Art instruction helps children with the development of motor skills, language skills, social skills, decision-making, risk-taking, and inventiveness. Visual arts teach learners about color, layout, perspective, and balance: all techniques that are necessary in presentations (visual, digital) of academic work. 
+      These types of activities contribute in many ways to a students further in career like in designing a product or project presentations.
+    </p>
+  </div>
+  <div>
+    <img class="im"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/service/exb/draw.JPG" alt="" width=" 300px" height="300px">
+  </div>
+</div>
+</section>
+
+
+
+
+
+
+
+
+<!-- <section>
   <div class="container">
     <div id="mdb-lightbox-ui"></div>
 
@@ -170,7 +227,7 @@
 </div>
 
 
-</section>
+</section> -->
 <br>
 
   <!-- jQuery -->
