--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Vidarbha Buniyadi Primary School, High School and Junior College</title>
+
   <!-- MDB icon -->
-  <link rel="icon" href="./img/fav.ico" type="image/x-icon">
+  <link rel="icon" href="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/logo.ico" type="image/x-icon">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -26,6 +26,17 @@
   <link rel="stylesheet" href="css/crouselcounter.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
+
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-174954682-1');
+  </script>
 </head>
 <body >
 
@@ -111,7 +122,7 @@
   <div class="carousel-item active facbreadcrum">
       <img class="d-block w-100" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/4.jpg"
         alt="First slide">
-        <p style="padding: 0;  color: #c52611;" class="midle"> <img class="slider-logo" src="./img/fav.ico" width="200px" height="200px" alt=""> <br>  Welcome to  <br> Vidharbh Buniyadi  <br> </p>
+        <p style="padding: 0;  color: #c52611;" class="midle"> <img class="slider-logo" src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/home/logo.ico" width="200px" height="200px" alt=""> <br>  Welcome to  <br> Vidharbh Buniyadi  <br> </p>
        
     </div>
     <!--/First slide-->
