--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Title</title>
+ 
   <!-- MDB icon -->
   <link rel="icon" href="./img/fav.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -20,7 +20,16 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/gallerycss.css">
 
- 
+  <title> Vidarbha  Buniyad School and Jr. College</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174954682-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174954682-1');
+</script>
 </head>
 <body >
   <section>
@@ -93,7 +102,7 @@
 
 <section >
   <div  class="facbreadcrum" >
-    <img   class="facbread"  src="./img/newGallery.png" alt="" width="100%" >
+    <img   class="facbread"  src="http://vidarbhabuniyadischoolandjuniorcollege.in/img/gall/bread.png" alt="" width="100%" >
     <div class="midle">
       <p>  Gallery  <br>
      </p>
